@@ -144,12 +144,14 @@ include(FindPackageHandleStandardArgs)
 
 # Find database(s)
 set(USE_SQLITE3 0)
+set(USE_POSTGRESQL 0)
 set(USE_LEVELDB 0)
 set(USE_REDIS 0)
 
 OPTION(ENABLE_ANY_DATABASE "Enable any available database backends" True)
 OPTION(ENABLE_ALL_DATABASES "Enable all possible database backends")
 OPTION(ENABLE_SQLITE3 "Enable sqlite3 backend" True)
+OPTION(ENABLE_POSTGRESQL "Enable postgresql backend")
 OPTION(ENABLE_LEVELDB "Enable LevelDB backend")
 OPTION(ENABLE_REDIS "Enable redis backend")
 
@@ -172,6 +174,26 @@ if(ENABLE_SQLITE3 OR ENABLE_ANY_DATABASE OR ENABLE_ALL_DATABASES)
 		endif(ENABLE_SQLITE3 OR ENABLE_ALL_DATABASES)
 	endif(SQLITE3_LIBRARY AND SQLITE3_INCLUDE_DIR)
 endif(ENABLE_SQLITE3 OR ENABLE_ANY_DATABASE OR ENABLE_ALL_DATABASES)
+
+# Find postgresql
+if(ENABLE_POSTGRESQL OR ENABLE_ANY_DATABASE OR ENABLE_ALL_DATABASES)
+	find_library(POSTGRESQL_LIBRARY pq)
+	find_path(POSTGRESQL_INCLUDE_DIR libpq-fe.h PATH_SUFFIXES postgresql)
+	message (STATUS "postgresql library: ${POSTGRESQL_LIBRARY}")
+	message (STATUS "postgresql headers: ${POSTGRESQL_INCLUDE_DIR}")
+	if(POSTGRESQL_LIBRARY AND POSTGRESQL_INCLUDE_DIR)
+		set(USE_POSTGRESQL 1)
+		message(STATUS "postgresql backend enabled")
+		include_directories(${POSTGRESQL_INCLUDE_DIR})
+	else(POSTGRESQL_LIBRARY AND POSTGRESQL_INCLUDE_DIR)
+		set(USE_POSTGRESQL 0)
+		if(ENABLE_POSTGRESQL OR ENABLE_ALL_DATABASES)
+			message(SEND_ERROR "postgresql backend requested but postgresql libraries not found!")
+		else(ENABLE_POSTGRESQL OR ENABLE_ALL_DATABASES)
+			message(STATUS "postgresql not enabled (postgresql libraries and/or headers not found)")
+		endif(ENABLE_POSTGRESQL OR ENABLE_ALL_DATABASES)
+	endif(POSTGRESQL_LIBRARY AND POSTGRESQL_INCLUDE_DIR)
+endif(ENABLE_POSTGRESQL OR ENABLE_ANY_DATABASE OR ENABLE_ALL_DATABASES)
 
 # Find leveldb
 if(ENABLE_LEVELDB OR ENABLE_ANY_DATABASE OR ENABLE_ALL_DATABASES)
@@ -213,9 +235,9 @@ if(ENABLE_REDIS OR ENABLE_ANY_DATABASE OR ENABLE_ALL_DATABASES)
 	endif(REDIS_LIBRARY AND REDIS_INCLUDE_DIR)
 endif(ENABLE_REDIS OR ENABLE_ANY_DATABASE OR ENABLE_ALL_DATABASES)
 
-if(NOT USE_SQLITE3 AND NOT USE_LEVELDB AND NOT USE_REDIS)
+if(NOT USE_SQLITE3 AND NOT USE_POSTGRESQL AND NOT USE_LEVELDB AND NOT USE_REDIS)
 	message(SEND_ERROR "No database backends are configured, or none could be found")
-endif(NOT USE_SQLITE3 AND NOT USE_LEVELDB AND NOT USE_REDIS)
+endif(NOT USE_SQLITE3 AND NOT USE_POSTGRESQL AND NOT USE_LEVELDB AND NOT USE_REDIS)
 
 include_directories(
 	"${PROJECT_BINARY_DIR}"
@@ -246,6 +268,11 @@ if(USE_SQLITE3)
 	set(mapper_SRCS ${mapper_SRCS} db-sqlite3.cpp)
 	set(LINK_LIBRARIES ${LINK_LIBRARIES} ${SQLITE3_LIBRARY})
 endif(USE_SQLITE3)
+
+if(USE_POSTGRESQL)
+	set(mapper_SRCS ${mapper_SRCS} db-postgresql.cpp)
+	set(LINK_LIBRARIES ${LINK_LIBRARIES} ${POSTGRESQL_LIBRARY})
+endif(USE_POSTGRESQL)
 
 if(USE_LEVELDB)
 	set(mapper_SRCS ${mapper_SRCS} db-leveldb.cpp)
