@@ -4,6 +4,7 @@
 #define CMAKE_CONFIG_H
 
 #define USE_SQLITE3 @USE_SQLITE3@
+#define USE_POSTGRESQL @USE_POSTGRESQL@
 #define USE_LEVELDB @USE_LEVELDB@
 #define USE_REDIS @USE_REDIS@
 
