@@ -36,6 +36,12 @@
 #define USAGE_NAME_SQLITE
 #endif
 
+#if USE_POSTGRESQL
+#define USAGE_NAME_POSTGRESQL "/postgresql"
+#else
+#define USAGE_NAME_POSTGRESQL
+#endif
+
 #if USE_LEVELDB
 #define USAGE_NAME_LEVELDB "/leveldb"
 #else
@@ -48,18 +54,20 @@
 #define USAGE_NAME_REDIS
 #endif
 
-#define USAGE_DATABASES "auto" USAGE_NAME_SQLITE USAGE_NAME_LEVELDB USAGE_NAME_REDIS
+#define USAGE_DATABASES "auto" USAGE_NAME_SQLITE USAGE_NAME_POSTGRESQL USAGE_NAME_LEVELDB USAGE_NAME_REDIS
 
 #if !USE_SQLITE3 && !USE_LEVELDB && !USE_REDIS
 #error No database backends configured !
 #endif
 
 // default database to use
-#if USE_SQLITE3 && !USE_LEVELDB && !USE_REDIS
+#if USE_SQLITE3 && !USE_POSTGRESQL && !USE_LEVELDB && !USE_REDIS
 #define DEFAULT_BACKEND "sqlite3"
-#elif !USE_SQLITE3 && USE_LEVELDB && !USE_REDIS
+#elif !USE_SQLITE3 && USE_POSTGRESQL && !USE_LEVELDB && !USE_REDIS
+#define DEFAULT_BACKEND "postgresql"
+#elif !USE_SQLITE3 && !USE_POSTGRESQL && USE_LEVELDB && !USE_REDIS
 #define DEFAULT_BACKEND "leveldb"
-#elif !USE_SQLITE3 && !USE_LEVELDB && USE_REDIS
+#elif !USE_SQLITE3 && !USE_POSTGRESQL && !USE_LEVELDB && USE_REDIS
 #define DEFAULT_BACKEND "redis"
 #else
 #define DEFAULT_BACKEND "auto"
