@@ -1,4 +1,7 @@
 []
+    Features:
+	- Support for postgresql backend added
+		Compatible with both ShadowNinja's and johnnyjoy's implementation
     Enhancements:
         - Updated the included colors file with colors for the new tiles that
 	 	were recently added to the default minetest game.
